--- a/pages/pokimon_id.html
+++ b/pages/pokimon_id.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="style.css">
-
-
+<script>
+    const pokimon = fatch()
+</script>
 <body>
     <h1><b>
     </b></h1>
     <div class="pokimon_pic ">
     </div>
     <table>
-        <!-- haders of table -->
+        <!-- heder of table -->
         <tr>
             <th>HP</th>
             <th>Attack</th>
@@ -20,12 +21,12 @@
         </tr>
         <!-- data of table in the same order  as haders  -->
         <tr>
-            <td class="col1 "></td>
-            <td class="col2 "></td>
-            <td class="col3 "></td>
-            <td class="col4 "></td>
-            <td class="col5 "></td>
-            <td class="col6 "></td>
+            <td class="HP"></td>
+            <td class="attack"></td>
+            <td class="defense"></td>
+            <td class="sp.Attack"></td>
+            <td class="sp.defense"></td>
+            <td class="speed"></td>
         </tr>
     </table>
 </body>
