--- a/pages/index.html
+++ b/pages/index.html
@@ -1,31 +1,21 @@
 <!DOCTYPE html>
 <html>
-<javascript src="index.js"></javascript>
-<header></header>
-
 <body>
-    <h1><b>welcome to the pokimon info website</b></h1>
+    <h1><b>welcome to the pokimones info website</b></h1>
     <p>
         <ul>
-            <ol>this site will presant the list of pokimones on the servers</ol>
-            <ol>evrey page contine a picture and some relvante data</ol>
+            <ol>this site will present the list of pokimones on the servers</ol>
+            <ol> every  page continued a picture and some relevant data</ol>
         </ul>
-        <button><a href="/pages/list_pokimon.html">View all pokemones</a></button>
-        </from>
+        <button><a href="./pages/list_pokimon.html">View all pokimones</a></button>
     </p>
     <h3>moust popular pokemones</h3>
+    <script></script>
     <div class="top_trhee_pokimons">
         <ul>
-            <!-- top trhee pokimons  -->
-            <ol></ol>
-            <ol></ol>
+            <!-- top three pokimones  -->
             <ol></ol>
         </ul>
     </div>
-    <div class="list-pokimons">
-        <button><a href="./list_pokimon.html">list of pokimons</a></button>
-    </div>
 </body>
-<footer></footer>
-
 </html>
