--- a/pages/list_pokimon.html
+++ b/pages/list_pokimon.html
@@ -1,17 +1,56 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="style.css">
-<script>
-    const list_pok = fetch("/api/pokimons").then(res=>res.json());
-    console.log({list_pok});
-</script>
+<head>
+    <style>
+        body{
+            background-color:chocolate;
+            text-indent: 20px;
+            margin: 5px;
+            padding:5px; 
+        }
+        #pokimon_box{
+            background-color:antiquewhite;
+            margin: 10px;
+            padding: 10px;
+            font-family: cursive;
+        }
+        h1{
+            background-color:antiquewhite;
+            margin: 10px;
+            padding: 10px;
+            color:chocolate;
+            font-size: large;
+            font-family: cursive;
+        }
+        
+    </style>
+    <title>pokimons list</title>
+</head>
 <body>
     <h1><b>
             All Pokimones
     </b></h1>
     <div class="scroll_box">
-        <div class="pokimon_box"></div>
+        <div id="pokimon_box"></div>
     </div>
 </body>
-
+<script>
+    fetch("/api/pokimons").then(function(response){
+        return response.json();
+    })
+    .then(function(data){
+        appendData(data);
+    })
+    .catch(function(err){
+      console.log("error : " + err);
+    })
+    function appendData(data){
+        var container = document.getElementById("pokimon_box");
+        for (var i = 0 ; i < data.length; i++){
+                var div = document.createElement("div");
+                div.innerHTML = 'id : ' + data[i].id + ' ,name : ' + data[i].name + '  ,type : ' + data[i].type; 
+                container.appendChild(div); 
+        }
+    }
+ </script>
 </html>
