--- Auto-Git Commit ---

--- a/pages/list_pokimon.html
+++ b/pages/list_pokimon.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<script type="text/javascript" src="./pages/list_pokimon.js"></script>
 
 <head>
     <style>
@@ -42,27 +43,6 @@
         <div id="pokimon_box"></div>
     </div>
 </body>
-<script>
-    fetch("/api/pokimons").then(function(response) {
-            return response.json();
-        })
-        .then(function(data) {
-            appendData(data);
-        })
-        .catch(function(err) {
-            console.log("error : " + err);
-        })
 
-    function appendData(data) {
-        var pic = new Image(100, 100);
-        var container = document.getElementById("pokimon_box");
-        for (var i = 0; i < data.length; i++) {
-            var div = document.createElement("div");
-            div.innerHTML = 'id : ' + data[i].id + ' ,name : ' + data[i].name + '  ,type : ' + data[i].type;
-            container.appendChild(div);
-            container.appendChild(pic);
-        }
-    }
-</script>
 
 </html>
