--- a/pages/pokimon_id.html
+++ b/pages/pokimon_id.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="style.css">
-<script>
-    const pokimon = fatch()
-</script>
+
 <body>
     <h1><b>
     </b></h1>
@@ -30,5 +28,8 @@
         </tr>
     </table>
 </body>
+
+<script type="text/javascript" src="./pokimon_id.js">
+</script>
 
 </html>
