--- a/list_pokimon.html
+++ b/list_pokimon.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Your file css -->
-    <link rel="stylesheet" href="/static-assets/css/list_pokimon.css" />
+    <link rel="stylesheet" type="text/css" href="/css/list_pokimon.css " />
     <title>pokimons list</title>
 </head>
 
@@ -17,6 +17,7 @@
     <div class=" scroll_box ">
         <div id="pokimon_box "></div>
     </div>
+    <script type="text/javascript" src="/js/list_pokimon.js"></script>
 </body>
 
 </html>
