--- Auto-Git Commit ---

--- a/list_pokimon.html
+++ b/list_pokimon.html
@@ -14,8 +14,9 @@
     <h1><b>
             All Pokimones
     </b></h1>
-    <div class=" scroll_box ">
-        <div id="pokimon_box "></div>
+    <div class="scroll_box">
+        <ul id="pokimon_list">
+        </ul>
     </div>
     <script type="text/javascript" src="/js/list_pokimon.js"></script>
 </body>
