finish id and home page

--- a/404.html
+++ b/404.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
+<head>
+    <link rel="stylesheet" type="text/css" href="/css/main_style.css" /> 
+</head>
 <html>
     <h1>
         404 page not found
     </h1>
+    <img id="404_pic" src="\image\404.jpeg">
 </html>
