--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="/css/main_style.css" /> 
+    </head>
 <body>
     <h1><b>welcome to the pokimones info website</b></h1>
+    <div class="text_box"> 
     <p>
         <ul>
             <ol>this site will present the list of pokimones on the servers</ol>
@@ -9,6 +13,7 @@
         </ul>
         <button><a href="./pages/list_pokimon.html">View all pokimones</a></button>
     </p>
+    </div>
     <h3>moust popular pokemones</h3>
     <script></script>
     <div class="top_trhee_pokimons">
