--- a/list_pokimon.html
+++ b/list_pokimon.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Your file css -->
     <link rel="stylesheet" type="text/css" href="/css/list_pokimon.css " />
+    <link rel="stylesheet" type="text/css" href="/css/main_style.css" /> 
     <title>pokimons list</title>
 </head>
 
@@ -15,8 +16,8 @@
             All Pokimones
     </b></h1>
     <div class="scroll_box">
-        <ul id="pokimon_list">
-        </ul>
+        <div id="pokimon_box">
+        </div>
     </div>
     <script type="text/javascript" src="/js/list_pokimon.js"></script>
 </body>
