--- a/pokimon_id.html
+++ b/pokimon_id.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="style.css">
-
+<head>
+    <link rel="stylesheet" type="text/css" href="/css/main_style.css" /> 
+</head>
 <body>
     <h1><b>
     </b></h1>
