--- a/404.html
+++ b/404.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <head>
+    <style>
+        h1{
+            width: 840px;
+        }
+        img{
+            padding: 5px;
+            margin: 5px;
+        }
+    </style>
     <link rel="stylesheet" type="text/css" href="/css/main_style.css" /> 
 </head>
 <html>
     <h1>
         404 page not found
     </h1>
-    <img id="404_pic" src="\image\404.jpeg">
+    <img id="404_pic" src="\image\404.jpeg" >
 </html>
