--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <ol>this site will present the list of pokimones on the servers</ol>
             <ol> every  page continued a picture and some relevant data</ol>
         </ul>
-        <button><a href="./pages/list_pokimon.html">View all pokimones</a></button>
+        <button><a href="http://localhost:3035/list_pokimon.html">View all pokimones</a></button>
     </p>
     </div>
     <h3>moust popular pokemones</h3>
