--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="/css/main_style.css" /> 
-    </head>
+
+<head>
+    <link rel="stylesheet" type="text/css" href="/css/main_style.css" />
+    <script type="text/javascript" src="./js/index.js">
+    </script>
+</head>
+
 <body>
     <h1><b>welcome to the pokimones info website</b></h1>
-    <div class="text_box"> 
-    <p>
-        <ul>
-            <ol>this site will present the list of pokimones on the servers</ol>
-            <ol> every  page continued a picture and some relevant data</ol>
-        </ul>
-        <button><a href="http://localhost:3035/list_pokimon.html">View all pokimones</a></button>
-    </p>
+    <div class="text_box">
+        <p>
+            <ul>
+                <ol>this site will present the list of pokimones on the servers</ol>
+                <ol> every page continued a picture and some relevant data</ol>
+            </ul>
+            <button><a href="http://localhost:3035/list_pokimon.html">View all pokimones</a></button>
+        </p>
     </div>
     <h3>moust popular pokemones</h3>
     <script></script>
     <div class="top_trhee_pokimons">
-        <ul>
-            <!-- top three pokimones  -->
-            <ol></ol>
-        </ul>
     </div>
 </body>
+
 </html>
