--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
     <h1><b>welcome to the pokimones info website</b></h1>
     <div class="text_box">
-        <p>
-            <ul>
+        <ul id=inner_box>
+            <p>
                 <ol>this site will present the list of pokimones on the servers</ol>
                 <ol> every page continued a picture and some relevant data</ol>
-            </ul>
-            <button><a href="http://localhost:3035/list_pokimon.html">View all pokimones</a></button>
-        </p>
+            </p>
+        </ul>
+        <button><a href="http://localhost:3035/list_pokimon.html">View all pokimones</a></button>
+
     </div>
     <h3>moust popular pokemones</h3>
     <script></script>
