--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <link rel="stylesheet" type="text/css" href="/css/main_style.css" />
     <script type="text/javascript" src="./js/index.js">
     </script>
+    <title>home page</title>
 </head>
 
 <body>
     <h1><b>welcome to the pokimones info website</b></h1>
     <div class="text_box">
-        <ul id=inner_box>
+        <ul id="inner_box">
             <p>
                 <ol>this site will present the list of pokimones on the servers</ol>
                 <ol> every page continued a picture and some relevant data</ol>
